--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.6",
     "next-redux-wrapper": "^8.1.0",
     "node-sass": "^9.0.0",
