--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "classnames": "^2.3.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "jwt-decode": "^3.1.2",
@@ -21,6 +22,7 @@
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "sass": "^1.63.6",
     "typescript": "5.1.3"
